src/snapshots/openapi_to_rust__test_helpers__nested_inline_objects_test.snap
---
source: src/test_helpers.rs
expression: "&generated_code"
---
//! Generated types from OpenAPI specification
//!
//! This file contains all the generated types for the API.
//! Do not edit manually - regenerate using the appropriate script.
#![allow(clippy::large_enum_variant)]
#![allow(clippy::format_in_format_args)]
#![allow(clippy::let_unit_value)]
#![allow(unreachable_patterns)]
use serde::{Deserialize, Serialize};
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct NestedResponse {
    pub results: Vec<NestedResponseResultsItem>,
}
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct NestedResponseResultsItem {
    pub id: String,
    #[serde(skip_serializing_if = "Option::is_none")]
    pub metadata: Option<NestedResponseResultsItemMetadata>,
}
#[derive(Debug, Clone, Deserialize, Serialize, Default)]
pub struct NestedResponseResultsItemMetadata {
    #[serde(skip_serializing_if = "Option::is_none")]
    pub attributes: Option<NestedResponseResultsItemMetadataAttributes>,
    #[serde(skip_serializing_if = "Option::is_none")]
    pub tags: Option<Vec<String>>,
}
#[derive(Debug, Clone, Deserialize, Serialize, Default)]
pub struct NestedResponseResultsItemMetadataAttributes {
    /// Additional properties matching the spec's
    /// `additionalProperties` value schema.
    #[serde(flatten)]
    pub additional_properties: std::collections::BTreeMap<String, String>,
}
