src/snapshots/openapi_to_rust__test_helpers__nullable_anyof_array_item_enum.snap
---
source: src/test_helpers.rs
expression: "&generated_code"
---
//! Generated types from OpenAPI specification
//!
//! This file contains all the generated types for the API.
//! Do not edit manually - regenerate using the appropriate script.
#![allow(clippy::large_enum_variant)]
#![allow(clippy::format_in_format_args)]
#![allow(clippy::let_unit_value)]
#![allow(unreachable_patterns)]
use serde::{Deserialize, Serialize};
/// Serde normally maps both a missing `Option<T>` field and an
/// explicit JSON null to `None`. Wrapping the decoded value in
/// `Some` retains the field-presence bit for `Option<Option<T>>`.
mod tri_state_serde {
    use serde::{Deserialize, Deserializer};
    pub fn deserialize<'de, D, T>(de: D) -> Result<Option<T>, D::Error>
    where
        D: Deserializer<'de>,
        T: Deserialize<'de>,
    {
        T::deserialize(de).map(Some)
    }
}
#[derive(Debug, Clone, Deserialize, Serialize, Default)]
pub struct GetProfileResponse {
    #[serde(
        skip_serializing_if = "Option::is_none",
        default,
        deserialize_with = "tri_state_serde::deserialize"
    )]
    pub languages: Option<Option<Vec<GetProfileResponseLanguagesItem>>>,
}
#[derive(Debug, Clone, PartialEq, Eq, Deserialize, Serialize, Default)]
pub enum GetProfileResponseLanguagesItem {
    #[default]
    #[serde(rename = "EN")]
    En,
    #[serde(rename = "ES")]
    Es,
}
impl GetProfileResponseLanguagesItem {
    pub fn as_str(&self) -> &'static str {
        match self {
            Self::En => "EN",
            Self::Es => "ES",
        }
    }
}
impl ::std::fmt::Display for GetProfileResponseLanguagesItem {
    fn fmt(&self, f: &mut ::std::fmt::Formatter<'_>) -> ::std::fmt::Result {
        f.write_str(self.as_str())
    }
}
impl AsRef<str> for GetProfileResponseLanguagesItem {
    fn as_ref(&self) -> &str {
        self.as_str()
    }
}
