src/snapshots/openapi_to_rust__test_helpers__property_underscore_types.snap
---
source: src/test_helpers.rs
expression: "&generated_code"
---
//! Generated types from OpenAPI specification
//!
//! This file contains all the generated types for the API.
//! Do not edit manually - regenerate using the appropriate script.
#![allow(clippy::large_enum_variant)]
#![allow(clippy::format_in_format_args)]
#![allow(clippy::let_unit_value)]
#![allow(unreachable_patterns)]
use serde::{Deserialize, Serialize};
/// Serde normally maps both a missing `Option<T>` field and an
/// explicit JSON null to `None`. Wrapping the decoded value in
/// `Some` retains the field-presence bit for `Option<Option<T>>`.
mod tri_state_serde {
    use serde::{Deserialize, Deserializer};
    pub fn deserialize<'de, D, T>(de: D) -> Result<Option<T>, D::Error>
    where
        D: Deserializer<'de>,
        T: Deserialize<'de>,
    {
        T::deserialize(de).map(Some)
    }
}
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct ConfigObject {
    #[serde(
        skip_serializing_if = "Option::is_none",
        default,
        deserialize_with = "tri_state_serde::deserialize"
    )]
    pub cache_control: Option<Option<ConfigObjectCacheControl>>,
    pub display_settings: ConfigObjectDisplaySettings,
}
#[derive(Debug, Clone, Deserialize, Serialize)]
#[serde(untagged)]
pub enum ConfigObjectDisplaySettings {
    String(String),
    HeightBlock(HeightBlock),
}
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct HeightBlock {
    pub height: i64,
    pub width: i64,
}
#[derive(Debug, Clone, PartialEq, Eq, Deserialize, Serialize, Default)]
pub enum ConfigObjectCacheControl {
    #[default]
    #[serde(rename = "ephemeral")]
    Ephemeral,
}
impl ConfigObjectCacheControl {
    pub fn as_str(&self) -> &'static str {
        match self {
            Self::Ephemeral => "ephemeral",
        }
    }
}
impl ::std::fmt::Display for ConfigObjectCacheControl {
    fn fmt(&self, f: &mut ::std::fmt::Formatter<'_>) -> ::std::fmt::Result {
        f.write_str(self.as_str())
    }
}
impl AsRef<str> for ConfigObjectCacheControl {
    fn as_ref(&self) -> &str {
        self.as_str()
    }
}
